--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vueye-phone-input",
+  "name": "vue3-phone-input",
   "version": "0.1.6",
   "private": false,
-  "main": "./build/vueye-phone-input.common.js",
+  "main": "./build/vue3-phone-input.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "bundle": "vue-cli-service build --dest build --target lib --name vueye-phone-input ./src/components/VueyePhoneInput.ts",
+    "bundle": "vue-cli-service build --dest build --target lib --name vue3-phone-input ./src/components/Vue3PhoneInput.ts",
     "test:unit": "vue-cli-service test:unit",
     "test:unit:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint"
@@ -33,6 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "jest-fetch-mock": "^3.0.3",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.35",
     "postcss-prefixer": "^2.1.2",
@@ -72,12 +73,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/boussadjra/vueye-phone-input.git"
+    "url": "git+https://github.com/boussadjra/vue3-phone-input.git"
   },
   "license": "MIT",
-  "homepage": "https://boussadjra.github.io/vueye-phone-input/",
+  "homepage": "https://boussadjra.github.io/vue3-phone-input/",
   "files": [
-    "build/vueye-phone-input.common.js",
+    "build/vue3-phone-input.common.js",
     "package.json",
     "*.md"
   ],
